--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -28,8 +28,12 @@
     color: $font-primary;
 
     h4 {
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 400;
         margin-bottom: 10px;
+    }
+    p {
+        font-size: 14px;
+        
     }
 }
