--- a/src/components/MovieCard/MovieCard.scss
+++ b/src/components/MovieCard/MovieCard.scss
@@ -15,8 +15,8 @@
     height: 300px;
 
     img {
-        width: 200px;
-        height: 300px;
+        width: 100%;
+        height: 100%;
     }
 }
 
