--- a/src/common/colors.scss
+++ b/src/common/colors.scss
@@ -1,5 +1,6 @@
 $primary-color: #1c202b;
 $secondary-color: #212633;
+$inputBg-color:rgba(255, 255, 255, .2);
 $font-primary: #e1e1e2;
 $font-secondary: #b0b1b5;
 $font-success: #6Cc788;
