--- a/src/components/FormSearch/FormSearch.scss
+++ b/src/components/FormSearch/FormSearch.scss
@@ -1,15 +1,28 @@
 @import "../../common/colors.scss";
 
+
+form {
+    display: flex;
+}
+
 input {
+    background-color: $inputBg-color;
+    color: $font-primary;
     width: 100%;
-    height: 40px;
-    border-radius: 22.5px;
-    line-height: 100%;
+    height: 50px;
     padding-right: 22.5px;
     padding-left: 50px;
+    font-size: 14px;
     border: none;
-    outline: 0;
-    background-color: rgba(255,255,255,.2);
-    color: $font-primary;
-    transition: all .2s ease-in-out 0s;
+    border-radius: 22.5px;
+    outline: none;
+}
+
+button {
+    width: 40px;
+    border: none;
+    background: url(../../images/search.svg) no-repeat center;
+    background-size: 30px;
+    cursor: pointer;
+
 }
