--- a/src/components/FormSearch/FormSearch.scss
+++ b/src/components/FormSearch/FormSearch.scss
@@ -24,5 +24,17 @@ button {
     background: url(../../images/search.svg) no-repeat center;
     background-size: 30px;
     cursor: pointer;
+}
 
+@media all and (max-width: 600px) {
+    button {
+        background-size: 20px;
+    }
+
+    input {
+        width: 100%;
+        height: 40px;
+        padding-right: 22.5px;
+        padding-left: 50px;
+    }
 }
