--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .logo {
@@ -31,3 +32,19 @@
     cursor: pointer;
 }
 
+
+@media all and (max-width: 600px) {
+    .header {
+        padding: 0px 5px;
+    }
+
+    .logo {
+        font-size: 16px;
+    }
+
+    .user-image,
+    .user-image img {
+        width: 20px;
+        height: 20px;
+    }
+}
